# assimp-anari-bridge

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh
include/: bridge.h
src/: CMakeLists.txt  bridge.cpp
test/: CMakeLists.txt  build.sh  test.cpp
vendors/: README.md
